Release 0.12b from 2016-12-08